--- a/RiceClassification.ipynb
+++ b/RiceClassification.ipynb
@@ -6,7 +6,8 @@
       "name": "RiceClassification.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "private_outputs": true
+      "private_outputs": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -18,6 +19,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/HilaShoshan/RiceClassification/blob/master/RiceClassification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": null,
